--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -150,8 +150,9 @@
 .radial-gradient {
   background-image: radial-gradient(
     circle,
-    var(--theme-color) 5%,
-    transparent 70%
+    rgba(74, 40, 211, 0.513) 5%,
+    rgba(74, 40, 211, 0.513) 10%,
+    transparent 60%
   );
   filter: blur(5px)
 }
