--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 @layer base {
   :root {
@@ -165,4 +166,8 @@
 
 .head-text {
   @apply text-4xl font-bold tracking-tight leading-[1.5] md:text-5xl lg:text-6xl;
+}
+
+.font-manrope {
+  font-family: "Manrope", sans-serif;
 }
